-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 6.0.2
-
None
-
-
c5db642791 (qt-creator/qt-creator/master)
There's no way to select Profiling build variant for QBS project.
For Gerrit Dashboard: QTCREATORBUG-27206 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
441976,2 | QbsProjectManager: Add UI support for "profile" build variant | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |