QbsProjectManager: Add UI support for "profile" build variant

Fixes: QTCREATORBUG-27206
Change-Id: I086e90173d71927d463498c31a567c1bc8089bd3
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Christian Stenger <christian.stenger@qt.io>